--- a/src/signature/footer.inc.html
+++ b/src/signature/footer.inc.html
@@ -25,7 +25,7 @@
       <table class="rbcc footer__main__col1" width="100%" align="left">
         <td class="footer__main__col1__td" align="left">
           <br />
-              <!-- @echo linkedin --> &nbsp;&nbsp; <!-- @echo github  --> &nbsp;&nbsp; <!-- @echo twitter -->
+              <span><!-- @echo linkedin --></span> &nbsp;&nbsp; <span style="padding-left:20px"><!-- @echo github  --></span> &nbsp;&nbsp; <span style="padding-left:20px"><!-- @echo twitter --></span> 
         </td>
       </table>
 
