--- a/src/signature/footer.inc.html
+++ b/src/signature/footer.inc.html
@@ -23,9 +23,9 @@
     <tr>
       <!-- @todo gulp-inline-css can't use width in percentages, doesn't parse align -->
       <table class="rbcc footer__main__col1" width="100%" align="left">
-        <td class="footer__main__col1__td" align="left">
+        <td class="footer__main__col1__td" align="left" height="25" width="25">
           <br />
-              <span><!-- @echo linkedin --></span> &nbsp;&nbsp; <span style="padding-left:20px"><!-- @echo github  --></span> &nbsp;&nbsp; <span style="padding-left:20px"><!-- @echo twitter --></span> 
+              <span><!-- @echo linkedin --></span> &nbsp;&nbsp; <span style="padding-left:20px"><!-- @echo github  --></span> &nbsp;&nbsp; <span style="padding-left:20px"><!-- @echo twitter --></span>
         </td>
       </table>
 
